# nscriptv3_bin

./: .gitignore  Cargo.toml  LICENSE  flake.nix  scriptspersecond.nc  test.nc  update.sh
src/: main.rs
