[package]
name = "nscript_standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
[dependencies]
nscript_lib = { git = "https://github.com/NickJasonHagen/Nscriptv3_lib" }
